--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,11 @@
     "target": "ES2020",
     "module": "CommonJS",
     "outDir": "./dist",
-    "rootDir": ".",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "typeRoots": ["./node_modules/@types", "./src/types"]
-  },
-  "include": ["src", "api"]
+  }
 }
